# detection_mobilenet

./: .gitignore  CMakeLists.txt  README.md  imagenet  mobilenent.cpp  opencv_bing
mxnet/: CMakeLists.txt
mxnet/example/image-classification/: train_imagenet.py
mxnet/example/image-classification/common/: fit.py
mxnet/example/image-classification/symbols/: mobilenet.py  mobilenetv2.py  vgg16-reduced-selu.py
mxnet/src/io/: image_det_aug_default.cc
mxnet/src/operator/contrib/: channelwise_convolution-inl.h  multibox_target-inl.h  multibox_target.cc  multibox_target.cu
mxnet/tools/caffe_converter/: caffe_parser.py  convert_model.py  convert_symbol.py
opencv-bing-test/: CMakeLists.txt
opencv-bing-test/saliency/src/: precomp.hpp
opencv-bing-test/src/: main.cpp
ssd/tools/: prepare_dataset.py
